fix(frontend): add styles to avoid title overflowing ss-634

--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -24,6 +24,8 @@
 
 .label {
 	margin: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.2;
@@ -67,7 +69,7 @@
 	}
 }
 
-@media (width <= 480px) {
+@media (width <=480px) {
 	.container {
 		padding: 24px;
 	}
